fixed alignment and backgrounds in s11-12

--- a/src/scss/s-11.scss
+++ b/src/scss/s-11.scss
@@ -205,7 +205,6 @@
     background-color: #fff;
     background-image: linear-gradient(90deg, #fff 22%, transparent 22%), url('../img/s-11/noisy-bg.png');
     padding: 0;
-    position: relative;
   }
 
   .container--s11 {
@@ -244,7 +243,7 @@
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: flex-start;
-    max-width: rem(724);
+    max-width: rem(708);
     margin: auto;
   }
 
@@ -258,6 +257,7 @@
 
   .s11__card {
     order: -1;
+    min-width: rem(332);
     max-width: rem(332);
     margin: 0 0 0 rem(9);
   }
@@ -309,6 +309,7 @@
     left: rem(392);
   }
 
+  //TODO: fix background images @ 2x
   @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
     .wrapper-s11 {
       background-image: linear-gradient(90deg, #fff 22%, transparent 22%), url('../img/s-11/noisy-bg@2x.png');
@@ -319,21 +320,15 @@
 // -------- DESKTOP VERSION 1200px --------
 @media (min-width: 1200px) {
   .wrapper-s11 {
-    background-color: #fff;
-    background-image: url('../img/s-11/s11-bg1200.png');
-    background-repeat: no-repeat;
-    background-position: top center;
-    background-attachment: local;
-    background-size: cover;
-    max-width: rem(1920);
-    padding-top: rem(130);
+    background-image: url('../img/s-11/s11-bg-left.png'),
+      url('../img/s-11/s11-bg-left.png'),linear-gradient(90deg, #fff 30%, transparent 30%), url('../img/s-11/noisy-bg.png');
+    background-repeat: no-repeat, no-repeat, repeat, repeat;
   }
 
   .container--s11 {
-    max-width: rem(1440);
     padding: 0;
-    margin: auto;
-    top: rem(122);
+    top: rem(252);
+    //margin: auto;
   }
 
   .s11__section-title {
@@ -343,12 +338,33 @@
 
   .s11__section-sub-title {
     font-size: rem(19);
-    margin-bottom: rem(92);
+    //margin-bottom: rem(92);
+  }
+
+  .s11__section-sub-title-top {
+    border-bottom: solid 3px black;
+    padding-bottom: rem(4);
+  }
+
+  .s11__section-sub-title-bot {
+    padding-top: rem(4);
   }
 
   .s11__section-content {
-    max-width: rem(938);
+    max-width: rem(942);
+    position: relative;
+    top: rem(40);
     margin: 0 auto 0 0;
+
+    &:before {
+      content: '';
+      background-image: url('../img/s-11/s11-bg-right.png');
+      width: rem(581);
+      height: rem(1144);
+      position: absolute;
+      top: rem(-128);
+      left: rem(820);
+    }
   }
 
   .s11__text {
@@ -358,8 +374,8 @@
   }
 
   .s11__card {
-    min-width: rem(434);
-    max-width: rem(434);
+    //min-width: rem(430);
+    max-width: rem(430);
   }
 
   .s11__card-technology {
@@ -404,6 +420,10 @@
     margin-left: rem(28);
   }
 
+  .s11__card__1 {
+    margin-bottom: rem(120);
+  }
+
   .s11__card-shadow-box {
     box-shadow: 0 35px 75px 0 rgba(0,0,0,.35), rem(-28) rem(20) $bgBlue;
   }
@@ -418,12 +438,20 @@
     font-size: rem(16);
     padding: rem(30) rem(32);
     top: rem(-255);
-    left: rem(545);
+    left: rem(560);
+    box-shadow: 0 10px 30px 0 rgba(0,0,0,.2);
   }
 
+  //TODO: fix background images @ 2x
   @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
     .wrapper-s11 {
-      background-image: url('../img/s-11/s11-bg1200@2x.png');
+      background-image: url('../img/s-11/s11-bg-left@2x.png'),
+      url('../img/s-11/s11-bg-left.png'),linear-gradient(90deg, #fff 30%, transparent 30%), url('../img/s-11/noisy-bg@2x.png');
+      background-size: rem(240) rem(780), cover, rem(100) rem(100);
+    }
+
+    .s11__section-content:before {
+      background-image: url('../img/s-11/s11-bg-right.png');
     }
   }
 }
