--- a/src/scss/s-12.scss
+++ b/src/scss/s-12.scss
@@ -37,7 +37,7 @@
   text-transform: uppercase;
   text-align: center;
   letter-spacing: rem(0.5);
-  margin-bottom: rem(32);
+  margin-bottom: rem(40);
 }
 
 .s12__about-course-list {
@@ -49,7 +49,7 @@
 .s12__about-course-list-item {
   font-family: $fontOpenSans;
   font-weight: 400;
-  font-size: rem(14);
+  font-size: rem(14.5);
   line-height: 1.429;
   color: $textGrey;
   padding: 0 rem(7) 0;
@@ -246,14 +246,17 @@
 // -------- DESKTOP VERSION 1200px --------
 @media (min-width: 1200px) {
   .wrapper-s12 {
-    padding: rem(100) 0 0;
+    // padding: rem(230) 0 0;
+    padding: rem(26) 0 0 0;
   }
 
   .container--s12 {
-    max-width: rem(1440);
     padding: 0 0 0 rem(2);
     margin: auto;
     position: relative;
+    // enable when merging:
+    top: rem(204);
+    z-index: 2;
 
     &:before {
       content: '';
@@ -296,7 +299,7 @@
 
   .s12-description {
     max-width: rem(470);
-    margin-right: rem(94);
+    margin-right: rem(64);
   }
 
   .s12__about-course-list {
